Fixed menu on small screen

--- a/wordpress/wp-content/themes/mariam-faso/src/sass/components/_header.scss
+++ b/wordpress/wp-content/themes/mariam-faso/src/sass/components/_header.scss
@@ -21,6 +21,14 @@
             flex-grow: 2;
             svg[id="navIconSVG"] {
                 display: none;
+                fill: $raspberry;
+            }
+        }
+    }
+    &.header--home {
+        .navigation {
+            svg[id="navIconSVG"] {
+                fill: white;
             }
         }
     }
