--- a/wordpress/wp-content/themes/mariam-faso/src/sass/components/_titles.scss
+++ b/wordpress/wp-content/themes/mariam-faso/src/sass/components/_titles.scss
@@ -18,6 +18,7 @@
         position: relative;
         bottom: 0.2em;
         margin-right: 0.25em;
+        z-index: -1;
     }
 }
 
